--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <title>EdgeLedger Financial | Accounting & Investment</title>
   </head>
   <body id="home">
-    
     <!-- Navbar -->
     <nav id="navbar">
       <h1 class="logo">
@@ -36,6 +35,20 @@
       </ul>
     </nav>
 
+    <!-- Header: Showcase -->
+    <header id="showcase">
+      <div class="showcase-content">
+        <h1 class="l-heading">
+          The Sky Is The Limit
+        </h1>
+        <p class="lead">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis,
+          laudantium illum assumenda quidem adipisci veritatis.
+        </p>
+        <a href="#what" class="btn">Read More</a>
+      </div>
+    </header>
 
+    
   </body>
 </html>
