--- a/index.html
+++ b/index.html
@@ -120,14 +120,69 @@
           Clients
         </h2>
         <div class="items py-1">
-          <div><img src="./img/logos/logo1.png" alt="Clients"></div>
-          <div><img src="./img/logos/logo2.png" alt="Clients"></div>
-          <div><img src="./img/logos/logo3.png" alt="Clients"></div>
-          <div><img src="./img/logos/logo4.png" alt="Clients"></div>
-          <div><img src="./img/logos/logo5.png" alt="Clients"></div>
+          <div><img src="./img/logos/logo1.png" alt="Clients" /></div>
+          <div><img src="./img/logos/logo2.png" alt="Clients" /></div>
+          <div><img src="./img/logos/logo3.png" alt="Clients" /></div>
+          <div><img src="./img/logos/logo4.png" alt="Clients" /></div>
+          <div><img src="./img/logos/logo5.png" alt="Clients" /></div>
         </div>
       </div>
     </section>
 
+    <!-- Section: Contact -->
+    <section id="contact">
+      <div class="contact-form bg-primary p-2">
+        <h2 class="m-heading">Contact Us</h2>
+        <p>Please use the form below tocontact us</p>
+        <form>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" placeholder="Enter Name" />
+          </div>
+          <div class="form-group">
+            <label for="name">Email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="Enter Email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="phone">Phone Number</label>
+            <input
+              type="text"
+              name="Phone"
+              id="phone"
+              placeholder="Enter Phone Number"
+            />
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea
+              name="message"
+              id="message"
+              placeholder="Enter Message"
+            ></textarea>
+          </div>
+          <input type="submit" value="Send" class="btn btn-dark" />
+        </form>
+      </div>
+      <div class="map"></div>
+    </section>
+
+    <!-- Footer -->
+    <footer id="main-footer" class="bg-dark text-center py-1">
+      <div class="container">
+        <p>Copyright &copy; 2019, EdgeLedger, All Rights Reserved</p>
+      </div>
+    </footer>
+
+    <script src="js/main.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBuWyIeOHBYleczfvtE5d-pJAvXx8kow&callback=initMap"
+      async
+      defer
+    ></script>
   </body>
 </html>
