--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Navbar -->
     <nav id="navbar">
       <h1 class="logo">
-        <span class="text-primary"> <i class="fas fa-book-open"></i> Edge </span
+        <span class="text-primary"> <i class="fas fa-book-open"></i> Edge</span
         >Ledger
       </h1>
       <ul>
@@ -178,7 +178,17 @@
       </div>
     </footer>
 
+    <!-- JQuery CDN -->
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.min.js"
+      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Local JS File -->
     <script src="js/main.js"></script>
+
+    <!-- Google Maps -->
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByBuWyIeOHBYleczfvtE5d-pJAvXx8kow&callback=initMap"
       async
