--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link
       rel="stylesheet"
-      media="screen and (min-width: 1100px"
+      media="screen and (min-width: 1100px)"
       href="css/widescreen.css"
     />
     <title>EdgeLedger Financial | Accounting & Investment</title>
