disabled a submit form actioon

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
       <div class="contact-form bg-primary p-2">
         <h2 class="m-heading">Contact Us</h2>
         <p>Please use the form below tocontact us</p>
-        <form action="process.php" method="POST"> 
+        <!-- <form action="process.php" method="POST">  -->
+        <form>
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" name="name" id="name" placeholder="Enter Name" />
